# rules_python

python/private/pypi/: extension.bzl  pip_repository_attrs.bzl
tests/integration/pip_parse/: BUILD.bazel  MODULE.bazel  inline_requirements.py
