module(name = "compile_pip_requirements")

bazel_dep(name = "rules_python", version = "0.0.0")
local_path_override(
    module_name = "rules_python",
    path = "../../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.9",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_empty",
    python_version = "3.9",
    requirements_lock = "//empty:requirements.txt",
)
pip.parse(
    hub_name = "inline_requirements",
    python_version = "3.9",
    requirements = {
        "numpy": "2.0.2",
        "requests": "2.32.3",
        # Transitive dependencies of requests:
        "urllib3": "2.2.3",
        "charset-normalizer": "3.4.0",
        "idna": "3.10",
        "certifi": "2024.8.30",
    },
)
use_repo(pip, "pip_empty", "inline_requirements")
